testsuite/bsc.typechecker/kind/NonNumWhereNumExpected.bs.bsc-out.expected
checking package dependencies
compiling NonNumWhereNumExpected.bs
Error: "NonNumWhereNumExpected.bs", line 3, column 9: (T0026)
  The value type `Bool' was found where a numeric type was expected.
