testsuite/bsc.typechecker/kind/NonNumWhereNumExpected.bs
package NonNumWhereNumExpected () where

x :: Bit Bool
x = 0

